Closed
Bug 1440461
Opened 8 years ago
Closed 8 years ago
[CSD] disable titlebar rendering for Beta/Release 59
Categories
(Core :: Widget: Gtk, defect, P1)
Core
Widget: Gtk
Tracking
()
VERIFIED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox59 | --- | verified |
| firefox60 | --- | unaffected |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
glandium
:
review+
lizzard
:
approval-mozilla-beta+
lizzard
:
approval-mozilla-release+
|
Details |
[Tracking Requested - why for this release]:
The titlebar rendering is recently enabled at Beta but with many bugs fixed at Nightly. Let's disable this feature for Beta / Release 59 and ship at 60 where majority of the issues are fixed.
| Assignee | ||
Updated•8 years ago
|
Summary: [CSD] disable titlebar rendering for Beta/Release → [CSD] disable titlebar rendering for Beta/Release 59
| Assignee | ||
Updated•8 years ago
|
status-firefox59:
--- → affected
status-firefox60:
affected → ---
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•8 years ago
|
||
Mike, can you please check this path? Otherwise we'll ship unfinished feature at Firefox 59. Thanks!
Flags: needinfo?(mh+mozilla)
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8953214 [details]
Bug 1440461 - Disable titlebar rendering for Linux/Firefox 59,
https://reviewboard.mozilla.org/r/222504/#review229426
Attachment #8953214 -
Flags: review?(mh+mozilla) → review+
Updated•8 years ago
|
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8953214 [details]
Bug 1440461 - Disable titlebar rendering for Linux/Firefox 59,
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1283299
[User impact if declined]: Users can enable unfinished feature implementation which contains visual bugs (wrong button positions on Ubuntu, wrong titlebar size and so on). That may lead to poor user experience and newly filed bugs (which are already fixed at Nightly).
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: no
[Needs manual test from QE? If yes, steps to reproduce]: Make sure titlebar rendering is disabled. "Tilebar" checkbox is missing at Hamburger menu -> Customise.
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no.
[Why is the change risky/not risky?]: It only reverts titlebar build config (Bug 1415481) for Beta/Release and disables WM detection.
[String changes made/needed]: none
Attachment #8953214 -
Flags: approval-mozilla-beta?
Comment 5•8 years ago
|
||
Comment on attachment 8953214 [details]
Bug 1440461 - Disable titlebar rendering for Linux/Firefox 59,
Sounds sensible to ship this in 60 instead.
This should land for 59 beta 14.
Attachment #8953214 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•8 years ago
|
status-firefox60:
--- → unaffected
Pushed by csabou@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9d1f52cabe41
Disable titlebar rendering for Linux/Firefox 59, r=glandium
Comment 7•8 years ago
|
||
Backed out for build bustages on nsWindow.cpp
Log: https://treeherder.mozilla.org/logviewer.html#?job_id=165095188&repo=autoland&lineNumber=18856
Flags: needinfo?(stransky)
Backout by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dca35aa6d1ab
Backed out changeset 9d1f52cabe41 for build bustages on nsWindow.cpp
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 10•8 years ago
|
||
Sorry, lint does not like the unused code. Added new patch and landed at try.
Flags: needinfo?(stransky)
| Assignee | ||
Comment 11•8 years ago
|
||
Comment on attachment 8953214 [details]
Bug 1440461 - Disable titlebar rendering for Linux/Firefox 59,
Requested release land as we miss beta merge here. Try looks good.
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1283299
[User impact if declined]: Users can enable unfinished feature implementation which contains visual bugs (wrong button positions on Ubuntu, wrong titlebar size and so on). That may lead to poor user experience and newly filed bugs (which are already fixed at Nightly).
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: no
[Needs manual test from QE? If yes, steps to reproduce]: Make sure titlebar rendering is disabled. "Tilebar" checkbox is missing at Hamburger menu -> Customise.
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no.
[Why is the change risky/not risky?]: It only reverts titlebar build config (Bug 1415481) for Beta/Release and disables WM detection.
[String changes made/needed]: none
Attachment #8953214 -
Flags: approval-mozilla-release?
Comment 12•8 years ago
|
||
Comment on attachment 8953214 [details]
Bug 1440461 - Disable titlebar rendering for Linux/Firefox 59,
OK for uplift to m-r for the 59 RC build.
Attachment #8953214 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 13•8 years ago
|
||
| uplift | ||
https://hg.mozilla.org/releases/mozilla-beta/rev/68edd6cf79ce (FIREFOX_59b_RELBRANCH)
https://hg.mozilla.org/releases/mozilla-release/rev/95ba1f679492
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•8 years ago
|
Flags: qe-verify+
Comment 14•8 years ago
|
||
Verified that Firefox 59.0 RC build for Ubuntu no longer has the Title Bar checkbox in Customize mode using Ubuntu 14.04 x86 and 16.04 x64.
Firefox 59.0 builds were not affected by this change under Windows 10 and Mac OS X 10.13.
You need to log in
before you can comment on or make changes to this bug.
Description
•