widget/gtk/nsWindow.cpp
@@ -6910,6 +6910,10 @@ nsWindow::DoDrawTitlebar() const
 
 nsWindow::CSDSupportLevel
 nsWindow::GetCSDSupportLevel() {
+    // Disabled due to Bug 1440461
+    return CSD_SUPPORT_NONE;
+
+
     if (sCSDSupportLevel != CSD_SUPPORT_UNKNOWN) {
         return sCSDSupportLevel;
     }
